--- a/DOM/style.css
+++ b/DOM/style.css
@@ -12,7 +12,7 @@
     gap: 20px;
 }
 .input{
-    width: 100%;
+    width: 300px;
     height: 350px;
     box-shadow: 0px 0px 6px 3px rgb(90, 89, 89);
     display: flex;
@@ -28,6 +28,20 @@
     height: 30px;
 }
 .btn{
+    margin-top: 30px;
     width: 270px;
-    height: 30px;
+    height: 40px;
+    background-color: cyan;
+}
+img{
+    width: 80%;
+    position: relative;
+    top: 20px;
+}
+.text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 200px;
 }
